# jupiter-amm-implementation

./: .gitignore  Cargo.toml
jupiter-core/: Cargo.toml
jupiter-core/src/: build_swap_transaction.rs  lib.rs
jupiter-core/src/amms/: amm.rs  loader.rs  mod.rs  sega_amm.rs  spl_token_swap_amm.rs  test_harness.rs
jupiter-core/src/math/: token_swap.rs
jupiter-core/src/sega/: calculator.rs  constant_product.rs  mod.rs  swap.rs
jupiter-core/tests/: test_amms.rs
jupiter-core/tests/fixtures/accounts/AVLSbLUMNZuo7aQgtMbaaJCXS74EkumrJakJRX2yBdcF/: 74SwLWTzvJALA2GYh3WhoBY12AitB1crfJs6GFjsoPWC.json  AVLSbLUMNZuo7aQgtMbaaJCXS74EkumrJakJRX2yBdcF.json  BjZxF9CnEuR1vxXffJwun81i3Doe2C2vQCdJpShxCieM.json  FF8VXqRpSsrS7SqhNMNbEw6AQxx6HKJ3uD2Evxmt1BUD.json  FtpneU7pbmn3A9hG2KYjN7cEFd7gdej7gYZvZ4wzTZWU.json  SonicxvLud67EceaEzCLRnMTBqzYUUYNr93DBkBdDES.json  SysvarC1ock11111111111111111111111111111111.json
jupiter-core/tests/fixtures/accounts/EGZ7tiLeH62TPV1gL8WwbXGzEPa9zmcpVnnkPKKnrE2U/: 75HgnSvXbWKZBpZHveX68ZzAhDqMzNDS29X6BGLtxMo1.json  8JnSiuvQq3BVuCU3n4DrSTw9chBSPvEMswrhtifVkr1o.json  ANP74VNsHwSrq9uUSjiSNyNWvf6ZPrKTmE4gHoNd13Lg.json  APDFRM3HMr8CAGXwKHiu2f5ePSpaiEJhaURwhsRrUUt9.json  EGZ7tiLeH62TPV1gL8WwbXGzEPa9zmcpVnnkPKKnrE2U.json  EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v.json  JU8kmKzDHF9sXWsnoznaFDFezLsE5uomX2JkRMbmsQP.json  So11111111111111111111111111111111111111112.json  SysvarC1ock11111111111111111111111111111111.json
jupiter-core/tests/fixtures/accounts/F13xvvx45jVGd84ynK3c8T89UejQVxjCLtmHfPmAXAHP/: 3cGHDS8uWhdxQj14vTmFtYHX3NMouPpE4o9MjQ43Bbf4.json  6uUn2okWk5v4x9Gc4n2LLGHtWoa9tmizHq1363dW7t9W.json  AiwmnLy7xPT28dqZpkRm6i1ZGwELUCzCsuN92v4JkSeU.json  B4RNxMJGRzKFQyTq2Uwkmpyjtew13n7KtdqZy6qgENTu.json  EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v.json  Es9vMFrzaCERmJfrF4H2FYD4KCoNkY11McCe8BenwNYB.json  (+3 more)
sega-cp-swap/: Cargo.toml
(+2 files in other folders)
