[package]
name = "jupiter-core"
version = "0.1.0"
description = ""
edition = { workspace = true }

[dependencies]
ahash = "0.8.11"
anchor-lang = { workspace = true }
solana-sdk = { workspace = true }
solana-client = { workspace = true }
solana-account-decoder = { workspace = true }
solana-program-test = { workspace = true }
spl-token-swap = { git = "https://github.com/jup-ag/solana-program-library.git", rev = "199de2208534f37fe077a0b1d7a9e17f305ed363" }
serde_json = "1.0.82"
anyhow = "1.0"
serde = "1.0.140"
lazy_static = "1.2.0"
rust_decimal = "1.26.1"
jupiter-amm-interface = { workspace = true }
bincode = "1.3.3"
jupiter = { path = "../jupiter" }
glob = "0.3.1"
async-trait = "0.1.77"
paste = "1.0.14"
tokio = { workspace = true, features = ["full"] }
assert_matches = "1.5.0"
itertools = "0.12.1"
clap = { version = "4.5.2", features = ["derive"] }

# SPL
spl-token = { workspace = true, features = ["no-entrypoint"] }
spl-associated-token-account = { workspace = true, features = [
    "no-entrypoint",
] }
spl-token-2022 = { workspace = true, features = ["no-entrypoint"] }
